[package]
name = "illuminate"
version = "0.1.1"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "A Laravel inspired crate"
license = "MIT"

[lib]
name = "illuminate"
crate-type = ["lib"]
path = "src/Illuminate/lib.rs"

[dependencies]
illuminate-support = { path = "Support", version = "0.1.0"}
illuminate-container = { path = "Container", version = "0.1.0"}
illuminate-contracts = { path = "Contracts", version = "0.1.0"}

[workspace]
members = ["Support", "Container", "Contracts"]

[workspace.lints.rust]
unsafe_code = "forbid"
